# mp2

./: .gitignore  .gitmodules  README.md  ac_backup.py  apt-packages.txt  arena_dimensions.txt  mission-control-apt-packages.txt  mission_tree.xml  todo
moonpie_lari/: package.xml  result.txt  setup.cfg  setup.py
moonpie_lari/config/: ekf.yaml  imu_params.yaml  nav2_params.yaml
moonpie_lari/install/: local_setup.sh  setup.sh
moonpie_lari/install/moonpie-lari/share/moonpie-lari/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
moonpie_lari/launch/: lari.launch.py  moonpie_lari.py  navigation.launch.py  simulation.launch.py
moonpie_lari/log/: latest_build
moonpie_lari/moonpie_lari/: arduino_comms.py  arduino_control.py  arduino_control_test.py
moonpie_lari/moonpie_lari/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
moonpie_lari/moonpie_lari/launch/: lari_launch.py
moonpie_lari/moonpie_lari/log/: latest_build
moonpie_lari/urdf/: robot.urdf
moonpie_lari/worlds/: empty.world
moonpie_osamu/: CMakeLists.txt  TODO.md  apt-packages.txt  install_orbslam3.sh  package.xml  setup.cfg  setup.py
moonpie_osamu/config/: costmap_filter_info.yaml  default_tree.xml  dump_keepout_mask.pgm  ekf.yaml  generate_dump_keepout_mask.py  mission_tree.xml  nav2_params.yaml  navigation.rviz  navigation_remote.rviz  realsense_d435.rviz
moonpie_osamu/include/moonpie_osamu/: behavior_tree_manager.hpp  mission_control.hpp  mission_control_panel.hpp  mission_state.hpp
moonpie_osamu/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
moonpie_osamu/install/moonpie_osamu/include/moonpie_osamu/moonpie_osamu/msg/: behavior_status.h  behavior_status.hpp  mission_command.h  mission_command.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
moonpie_osamu/install/moonpie_osamu/share/ament_index/resource_index/parent_prefix_path/: moonpie_osamu
moonpie_osamu/install/moonpie_osamu/share/moonpie_osamu/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
moonpie_osamu/install/moonpie_osamu/share/moonpie_osamu/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_moonpie_osamu__rosidl_generator_cExport-noconfig.cmake  export_moonpie_osamu__rosidl_generator_cExport.cmake  export_moonpie_osamu__rosidl_generator_cppExport.cmake  export_moonpie_osamu__rosidl_generator_pyExport-noconfig.cmake  export_moonpie_osamu__rosidl_generator_pyExport.cmake  export_moonpie_osamu__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_moonpie_osamu__rosidl_typesupport_fastrtps_cExport.cmake  export_moonpie_osamu__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_moonpie_osamu__rosidl_typesupport_fastrtps_cppExport.cmake  moonpie_osamuConfig-version.cmake  moonpie_osamuConfig.cmake  moonpie_osamu__rosidl_typesupport_cExport-noconfig.cmake  moonpie_osamu__rosidl_typesupport_cExport.cmake  moonpie_osamu__rosidl_typesupport_cppExport-noconfig.cmake  moonpie_osamu__rosidl_typesupport_cppExport.cmake  moonpie_osamu__rosidl_typesupport_introspection_cExport-noconfig.cmake  moonpie_osamu__rosidl_typesupport_introspection_cExport.cmake  moonpie_osamu__rosidl_typesupport_introspection_cppExport-noconfig.cmake  moonpie_osamu__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
moonpie_osamu/install/moonpie_osamu/share/moonpie_osamu/config/: costmap_filter_info.yaml  default_tree.xml  dump_keepout_mask.pgm  ekf.yaml  generate_dump_keepout_mask.py  mission_tree.xml  navigation.rviz  navigation_remote.rviz
moonpie_osamu/install/moonpie_osamu/share/moonpie_osamu/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
moonpie_osamu/install/moonpie_osamu/share/moonpie_osamu/launch/: aruco.launch.py  camera_only.launch.py  mission_control.launch.py  osamu.launch.py  osamu_dev.launch.py  robot_description.launch.py  robot_visualization.launch.py  slam.launch.py  test_realsense_d435i_color_no_imu.launch.py  test_realsense_d435i_infra_no_imu.launch.py  test_realsense_d435i_stereo_no_imu.launch.py
moonpie_osamu/install/moonpie_osamu/share/moonpie_osamu/msg/: BehaviorStatus.idl  BehaviorStatus.msg  MissionCommand.idl  MissionCommand.msg
moonpie_osamu/install/moonpie_osamu/share/moonpie_osamu/urdf/: robot.urdf
moonpie_osamu/launch/: aruco.launch.py  camera_only.launch.py  mission_control.launch.py  navigation.launch.py  osamu.launch.py  osamu_dev.launch.py  robot_description.launch.py  robot_visualization.launch.py  robot_with_camera.launch.py  slam.launch.py  test_realsense_d435i_color_no_imu.launch.py  test_realsense_d435i_infra_no_imu.launch.py  test_realsense_d435i_stereo_no_imu.launch.py
moonpie_osamu/moonpie_osamu/: behavior_tree_manager.cpp  behavior_tree_manager.hpp  mission_control.cpp  mission_control.hpp
moonpie_osamu/moonpie_osamu/bt_nodes/: CMakeLists.txt  backward_navigate_to_pose.cpp  dig.cpp  dump.cpp  find_aruco.cpp  register_nodes.cpp  scan_dump_zone.cpp  set_dump_goal.cpp  wait_for_start_command.cpp  wait_for_stop_command.cpp
moonpie_osamu/msg/: BehaviorStatus.msg  MissionCommand.msg
moonpie_osamu/scripts/: cleanup.py
moonpie_osamu/src/: behavior_tree_manager.cpp  digging_sequence_node.cpp  mission_control.cpp  mission_control_panel.cpp  mission_state.cpp
moonpie_osamu/urdf/: robot.urdf
nav2_straightline_planner/: CMakeLists.txt  package.xml  plugins.xml
nav2_straightline_planner/include/nav2_straightline_planner/: straight_line_planner.hpp
nav2_straightline_planner/src/: straight_line_planner.cpp
(+80 files in other folders)
