<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moonpie_lari</name>
  <version>0.0.0</version>
  <description>Package for the Lari raspberry pi for Mines Lunabotics Team Moonpie 2024</description>
  <maintainer email="nath.h.jensen@gmail.com">nath.h.jensen@gmail.com</maintainer>
  <license>
This is free and unencumbered software released into the public domain.

Anyone is free to copy, modify, publish, use, compile, sell, or
distribute this software, either in source code form or as a compiled
binary, for any purpose, commercial or non-commercial, and by any
means.

In jurisdictions that recognize copyright laws, the author or authors
of this software dedicate any and all copyright interest in the
software to the public domain. We make this dedication for the benefit
of the public at large and to the detriment of our heirs and
successors. We intend this dedication to be an overt act of
relinquishment in perpetuity of all present and future rights to this
software under copyright law.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR
OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
OTHER DEALINGS IN THE SOFTWARE.

For more information, please refer to https://unlicense.org/
</license>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!--deps for custom nodes-->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <!-- Navigation dependencies -->
  <depend>nav2_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_dwb_core</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_util</depend>
  <depend>nav2_voxel_grid</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_amcl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>realsense2_description</depend>
  <depend>robot_localization</depend>

  <!-- Simulation dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_control_test_nodes</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
