<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moonpie_osamu</name>
  <version>0.0.1</version>
  <description>Robot description and launch files for Osamu robot</description>
  <maintainer email="moonpie@todo.todo">moonpie</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>realsense2_camera</depend>
  <depend>joint_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <data_files>
      <data_files share="${prefix}/urdf">
        urdf/*
      </data_files>
    </data_files>
  </export>
</package>
